--- a/javascript.css
+++ b/javascript.css
@@ -1,42 +1,46 @@
 /*CSS reset settings here*/
-*{
- margin: 0px;
- padding: 0px;
-}
-#wrapper{
- width: 950px;
+*
+.container{
+ width: 970px;
  background-color: navy;
- margin: 0px auto;
- padding: 15px;
+ /*margin: 0px auto;*/
+ padding: 10px;
 }
-#header{
- height: 150px;
+.header{
+width: 100%;
+ /*height: 150px;*/
  background-color: red;
- margin-bottom:15px;
- border-radius: 30px;
- font-size: 30px;
+ margin-bottom: 10px;
+ border-radius: 10px;
 }
-#navigation{
-  height: 300px;
-  width: 200px;
+.navigation{
+  /*height: 300px;*/
+  width: 180px;
   background-color: teal;
-  border-radius: 30px;
+  border-radius: 10px;
+  padding: 10px;
   display: inline-block;
   vertical-align: top;
  }
- #main_content{
-  height: 400px;
-  width: 700px;
-  background-color: black;
+ ul{
+    color: white;
+    padding-left: 20px;
+    margin: 0;
+ }
+ .main_content{
+  /*height: 400px;*/
+  width: 720px;
+  background-color: #0f1822;
   margin-left: 15px;
   padding: 15px;
-  border-radius: 30px;
+  color: #c4d8ec;
+  border-radius: 10px;
   display: inline-block;
 }
-#footer{
- height: 120px;
- width: 660px;
+.footer{
+ /*height: 120px;*/
+ width: 100%;
  background-color: grey;
  margin-top: 15px;
- border-radius: 30px;
+ border-radius: 15px;
 }
